2007-02-26  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmlogin.c: Change Session mnemonic to "e" instead of "s"
	  so it doesn't conflict to "Start Again".

2007-02-26  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.h: Change AlwaysLoginCurrentSession to true by
	  default.  Fixes bug #406226.

2007-02-26  Lukasz Zalewski <lukas@dcs.qmul.ac.uk>

	* gdmsetup.glade: Changed vertical spacing between
	  groups of checkboxes/radiobuttons in gdmsetup interface.
	  Affected were:
	  Local/Background checkboxes (spacing 3)
	  Local/Behaviour checkboxes (spacing 3)
	  Local/Menu checkboxes (spacing 0)
	  Local/Welcome Message (spacing 3)
	  Similar changes were made to the Remote tab to keep both
	  greeter tabs in sync.
	  Security/Security checkboxes (spacing 2)
	  Security/Security Permissions (spacing 0)
	  This fixes bug #403242 (keeps the gdmsetup interface contained
	  within desktop space in 1024x768 with two 24 pixels panels)
	  Also moved groups of checkboxes/radiobuttons to their own vbox
	  containers such that changes in spacing between them does not
	  affect overall alignment of different elements in the main vbox
	  container

2007-02-20  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Dist MAINTAINERS

2006-02-15  Brian Cameron  <brian.cameron@sun.com>

	* config/PostSession.in: Remove call to sessionexit
	  script since I need to do further research to make
	  sure this is needed.

2006-02-14  Brian Cameron  <brian.cameron@sun.com>
	
	* gui/gdmdynamic.c: Fix comparison with string literal.
	  Fix by Hans Petter Jansson <hpj@novell.com>.  Fixes
	  bug #407687.

2006-02-13  Brian Cameron  <brian.cameron@sun.com>

	* config/PostSession.in: Call sessionexit script if
	  running on Solaris.
	* configure.ac, config/gnome.desktop.in.in: Now set
	  Exec/TryExec to /usr/dt/config/Xsession.jds for
	  Solaris.
	* po/POTFILES.in, po/POTFILES.skip: Update to reflect
	  the move of gnome.desktop.in to gnome.desktop.in.in.
