@@ -1,5 +1,15 @@
 2007-02-26  Brian Cameron  <brian.cameron@sun.com>
 
+        * gui/gdmchooser.c:  Fix setting of PIPE_BUF to fix buf #409801
+          to fix Hurd support.
+
+2007-02-26  Brian Cameron  <brian.cameron@sun.com>
+
+        * gui/gdmlogin.c: Change Session mnemonic to "e" instead of "s"
+          so it doesn't conflict to "Start Again".
+
+2007-02-26  Brian Cameron  <brian.cameron@sun.com>
+
 	* gui/gdmlogin.c: Change Session mnemonic to "e" instead of "s"
 	  so it doesn't conflict to "Start Again".
 
